Revert to integrating with the application plugin instead of replacing it